--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
         </svg>
         Share on Instagram
     </button>
+    <button id="instagramCameraButton" class="instagram-camera-button">
+        Camera
+    </button>
+    <button id="instagramPostButton" class="instagram-share-button">
+        Post
+    </button>
+    <button id="instagramSpecificPostButton" class="instagram-button">
+        Go to Specific Post
+    </button>
 
     <script>
         function shareToInstagram(imageUrl) {
@@ -55,11 +64,41 @@
                 alert("Please access this feature from a mobile device to share on Instagram.");
             }
         }
+        function openInstagramCamera() {
+            if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+                const instagramUrl = 'instagram://camera';
+                window.location.href = instagramUrl;
+            } else {
+                alert("Please access this feature from a mobile device to open the camera.");
+            }
+        }
+
+        function openInstagramPost() {
+            if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+                const instagramUrl = 'instagram://library';
+                window.location.href = instagramUrl;
+            } else {
+                alert("Please access this feature from a mobile device to post.");
+            }
+        }
+
+        function openSpecificInstagramPost() {
+            if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+                const postUrl = 'instagram://media?id=C9SVCJNosNmQOWYmA6axsUaJhX0fnhVdb-3P0o0';
+                window.location.href = postUrl;
+            } else {
+                alert("Please access this feature from a mobile device to view the post.");
+            }
+        }
 
         document.getElementById('instagramShareButton').addEventListener('click', function() {
             const imageUrl = document.getElementById('shareImage').src;
             shareToInstagram(imageUrl);
         });
+        document.getElementById('instagramCameraButton').addEventListener('click', openInstagramCamera);
+        document.getElementById('instagramPostButton').addEventListener('click', openInstagramPost);
+        document.getElementById('instagramSpecificPostButton').addEventListener('click', openSpecificInstagramPost);
+
     </script>
 </body>
 </html>
