Updated media id

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 
         function openSpecificInstagramPost() {
             if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-                const postUrl = 'instagram://media?id=C9SVCJNosNmQOWYmA6axsUaJhX0fnhVdb-3P0o0';
+                const postUrl = 'instagram://media?id=/C_5t4DBIX6n/?img_index=1';
+                
                 window.location.href = postUrl;
             } else {
                 alert("Please access this feature from a mobile device to view the post.");
