--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         Open post/camera
     </button>
     <button id="instagramSpecificPostButton" class="instagram-share-button">
-        Go to specicif Post
+        Go to specific Post
     </button>
 
     <script>
