--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <script>
         function shareToInstagram(imageUrl) {
-            const instagramUrl = `https://www.instagram.com/library?AssetPath=${encodeURIComponent(imageUrl)}`;
+            const instagramUrl = `https://www.instagram.com/library`;
             window.location.href = instagramUrl;
 
         }
