Revert "library test"
This reverts commit 0e8890eaaffa21122a34432eaca0d1c2956b11f6.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <script>
         function shareToInstagram(imageUrl) {
-            const instagramUrl = `https://www.instagram.com/library`;
+            const instagramUrl = `https://www.instagram.com/library?AssetPath=${encodeURIComponent(imageUrl)}`;
             window.location.href = instagramUrl;
 
         }
