Last fix and check

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <script>
         function shareToInstagram(imageUrl) {
-            const instagramUrl = `instagram://library?AssetPath=${encodeURIComponent(imageUrl)}`
+            const instagramUrl = `instagram://library?AssetPath=${imageUrl}`
 
             window.location.href = instagramUrl;
 
